# kis-trading-bot

./: .gitignore  AGENTS.md  Makefile  README.md  config-backtest.yaml  config.yaml  pyproject.toml  pytest.ini  requirements-data.txt  requirements-dev.txt  requirements.txt
alembic/: env.py  script.py.mako
data/: SOXL.csv  TQQQ.csv
docs/: spec.md
reports/: backtest.csv  backtest.json  backtest_20250919_125328.csv  backtest_20250919_125328.json  backtest_80k_20250919_125546.csv  backtest_80k_20250919_125546.json  backtest_detailed_20250919_130252.csv  backtest_detailed_20250919_130252.json  backtest_improved_20250919_130100.csv  backtest_improved_20250919_130100.json  backtest_weighted.json
scripts/: fetch_data.py  optimize.py
src/kisbot/: main.py
src/kisbot/core/: indicators.py  signals.py  slices.py
src/kisbot/db/: base.py  crud.py  models.py
src/kisbot/infra/: backtest.py  logger.py  rest_client.py  slack.py  ws_client.py
src/kisbot/services/: executor.py  trader.py
tests/: conftest.py  test_indicators.py  test_signals.py  test_slices.py
